modified the tittle

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ S
             <div class="row">
               <div class="col-md-12 justify-content-center">
                 <h1 id="name">Suman Chand</h1>
-            <p id="tagline">STUDENT | LEARNER | CURIOUS |</p>
+            <p id="tagline">HOSPITALITY AND CULINARY STUDENT</p>
             <a href="#about" id="learn-more">Learn More <i class="fa fa-angle-down"></i></a>
               </div>
             </div>            
